# pg_semver-rs

./: .changelog-go.yaml  CHANGELOG.md  Cargo.toml  LICENSE  META.json  README.md  SECURITY.md  generate_sql_schema.sh  semver.control
.cargo/: config.toml
.changelogs/released/0.1.0/: ReleaseInfo
.changelogs/unreleased/: master-MzeDnPMf
bench/: comp.sql  range.sql
doc/: semver-rs.md
sql/: _gen_full.sql
src/: lib.rs  range.rs  version.rs
