[package]
name = "semver-rs"
authors = ["Emanuel Bennici <eb@fabmation.de>"]
homepage = "https://www.fabmation.info"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[features]
default = ["pg15"]
pg14 = ["pgx/pg14", "pgx-tests/pg14" ]
pg15 = ["pgx/pg15", "pgx-tests/pg15" ]
pg_test = []

[dependencies]
pgx = "=0.6.1"
semver = { version = "1.0.16", features = ["serde"] }
serde = "1.0.152"

[dev-dependencies]
pgx-tests = "=0.6.1"

[profile.dev]
panic = "unwind"
lto = "thin"

[profile.release]
debug = false
debug-assertions = false
overflow-checks = false
panic = "unwind"
opt-level = 2
lto = "fat"
codegen-units = 1
